gcc/testsuite/gdc.test/compilable/placementnew.d
void f(int* p) @nogc
{
    new(*p) int;
}
